src/main/k8s/02-xyz-nfs-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: xyz-nfs-server
    namespace: xyz-dev
    labels:
        app: xyz-nfs-server
spec:
    replicas: 1
    selector:
        matchLabels:
            app: xyz-nfs-server
    template:
        metadata:
            labels:
                app: xyz-nfs-server
        spec:
            containers:
                -   name: nfs-server
                    image: itsthenetwork/nfs-server-alpine
                    securityContext:
                        privileged: true
                    ports:
                        -   containerPort: 2049
