src/main/k8s/12-xyz-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: xyz-deployment
    namespace: xyz-dev
    labels:
        app: xyz-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            app: xyz-deployment
    template:
        metadata:
            labels:
                app: xyz-deployment
        spec:
            containers:
                -   name: xyz
                    image: xyz:latest
                    # For example, not needed in Minikube
                    # imagePullPolicy: Never
                    ports:
                        -   name: xyz-port
                            containerPort: 8080
                    volumeMounts:
                        -   name: nfs-volume
                            mountPath: /mnt/gintra
            volumes:
                -   name: nfs-volume
                    persistentVolumeClaim:
                        claimName: xyz-nfs-persistent-volume-claim
