src/main/k8s/03-xyz-nfs-server-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: xyz-nfs-server
    namespace: xyz-dev
spec:
    selector:
        app: xyz-nfs-server
    ports:
        -   name: nfs
            port: 2049
            targetPort: 2049
    clusterIP: None
