src/main/k8s/11-xyz-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: xyz-postgres-service
    namespace: xyz-dev
spec:
    type: ClusterIP
    selector:
        app: xyz-postgres-deployment
    ports:
        -   protocol: TCP
            # Port where Ingress forwards to
            port: 5432
            # Deployment or POD port in container port
            #targetPort: 8080
            targetPort: pg-port
